--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
+      <p>Pilot here, over.</p>
+      <p>Pilot, the camera shows a teddy bear in the co-pilot seat can you confirm where your human copilot is?</p>
+      <p>He couldn't handle the altitude. So, I have a seasoned replacement here.</p>
+      <p>Well then what is his name! We need to add him to the passanger list!</p>
    </body>
-</html> 
+</html>
